# routes/api.php
@@ -15,4 +15,8 @@ use Illuminate\Http\Request;
 
 Route::prefix('v1')->middleware(['auth:api'])->group(function () {
     Route::get('/module', 'ModuleController@index');
+    Route::get('/module/{module_id}', 'ModuleController@show');
+    Route::post('/module', 'ModuleController@store');
+    Route::put('/module', 'ModuleController@update');
+    Route::delete('/module', 'ModuleController@destroy');
 });
